--- a/NormaMeasure/App.config
+++ b/NormaMeasure/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <NormaMeasure.Properties.Settings>
             <setting name="IsTestApp" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DeviceSettingsFileName" serializeAs="String">
                 <value>NormaDeviceSettings.ini</value>
