--- a/NormaMeasure/NormaMeasure.csproj
+++ b/NormaMeasure/NormaMeasure.csproj
@@ -47,23 +47,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBaseClasses\TeraDBMigration.cs" />
-    <Compile Include="DemoModeEntities\DemoTera.cs" />
-    <Compile Include="DevicesClasses\Device.cs" />
-    <Compile Include="DevicesClasses\Teraohmmeter.cs" />
-    <Compile Include="DevicesForms\coeffsSynchronyzeStatus.cs">
+    <Compile Include="Teraohmmeter\DBClasses\TeraDBMigration.cs" />
+    <Compile Include="Teraohmmeter\DemoTera.cs" />
+    <Compile Include="BaseClasses\Device.cs" />
+    <Compile Include="Teraohmmeter\TeraDevice.cs" />
+    <Compile Include="Teraohmmeter\Forms\coeffsSynchronyzeStatus.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DevicesForms\coeffsSynchronyzeStatus.designer.cs">
+    <Compile Include="Teraohmmeter\Forms\coeffsSynchronyzeStatus.designer.cs">
       <DependentUpon>coeffsSynchronyzeStatus.cs</DependentUpon>
     </Compile>
-    <Compile Include="DevicesForms\TeraForm.cs">
+    <Compile Include="Teraohmmeter\Forms\TeraForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DevicesForms\TeraForm.designer.cs">
+    <Compile Include="Teraohmmeter\Forms\TeraForm.designer.cs">
       <DependentUpon>TeraForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DevicesSettings\TeraSettings.Designer.cs">
+    <Compile Include="Teraohmmeter\TeraSettings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>TeraSettings.settings</DependentUpon>
@@ -74,17 +74,19 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MeasureClasses\MeasureBase.cs" />
-    <Compile Include="MeasureClasses\TeraMeasure.cs" />
+    <Compile Include="BaseClasses\Measure.cs" />
+    <Compile Include="Teraohmmeter\Measure\TeraMeasure.cs" />
+    <Compile Include="BaseClasses\MeasureResult.cs" />
+    <Compile Include="Teraohmmeter\Measure\MeasureResultTera.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DBControl.cs" />
     <Compile Include="Utils\IniFile.cs" />
     <Compile Include="Utils\ServiceFunctions.cs" />
-    <EmbeddedResource Include="DevicesForms\coeffsSynchronyzeStatus.resx">
+    <EmbeddedResource Include="Teraohmmeter\Forms\coeffsSynchronyzeStatus.resx">
       <DependentUpon>coeffsSynchronyzeStatus.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DevicesForms\TeraForm.resx">
+    <EmbeddedResource Include="Teraohmmeter\Forms\TeraForm.resx">
       <DependentUpon>TeraForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
@@ -99,7 +101,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="DevicesSettings\TeraSettings.settings">
+    <None Include="Teraohmmeter\TeraSettings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>TeraSettings.Designer.cs</LastGenOutput>
     </None>
