--- a/NormaMeasure/App.config
+++ b/NormaMeasure/App.config
@@ -2,13 +2,28 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="NormaMeasure.DBClasses.DBSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="NormaMeasure.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="NormaMeasure.DBClasses.DBSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
+        <NormaMeasure.DBClasses.DBSettings>
+            <setting name="DBUser" serializeAs="String">
+                <value>root</value>
+            </setting>
+            <setting name="DBHost" serializeAs="String">
+                <value>localhost</value>
+            </setting>
+            <setting name="DBPassword" serializeAs="String">
+                <value />
+            </setting>
+        </NormaMeasure.DBClasses.DBSettings>
         <NormaMeasure.Properties.Settings>
             <setting name="IsTestApp" serializeAs="String">
                 <value>True</value>
@@ -16,15 +31,16 @@
             <setting name="DeviceSettingsFileName" serializeAs="String">
                 <value>NormaDeviceSettings.ini</value>
             </setting>
-            <setting name="DBUser" serializeAs="String">
-                <value>root</value>
-            </setting>
-            <setting name="DBPassword" serializeAs="String">
-                <value />
-            </setting>
             <setting name="AdminMode" serializeAs="String">
                 <value>True</value>
             </setting>
         </NormaMeasure.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <NormaMeasure.DBClasses.DBSettings>
+            <setting name="DBName" serializeAs="String">
+                <value>db_norma</value>
+            </setting>
+        </NormaMeasure.DBClasses.DBSettings>
+    </applicationSettings>
 </configuration>
