31-01-2018 - Добавлено приведение результата к длине

--- a/NormaMeasure/NormaMeasure.csproj
+++ b/NormaMeasure/NormaMeasure.csproj
@@ -55,6 +55,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>DBSettings.settings</DependentUpon>
     </Compile>
+    <Compile Include="DBClasses\IsolationMaterial.cs" />
     <Compile Include="Teraohmmeter\DBClasses\TeraEtalonMap.cs" />
     <Compile Include="Teraohmmeter\DemoTera.cs" />
     <Compile Include="BaseClasses\Device.cs" />
