--- a/NormaMeasure/Properties/Settings.settings
+++ b/NormaMeasure/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="IsTestApp" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DeviceSettingsFileName" Type="System.String" Scope="User">
       <Value Profile="(Default)">NormaDeviceSettings.ini</Value>
