--- a/NormaMeasure/App.config
+++ b/NormaMeasure/App.config
@@ -26,7 +26,7 @@
         </NormaMeasure.DBClasses.DBSettings>
         <NormaMeasure.Properties.Settings>
             <setting name="IsTestApp" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DeviceSettingsFileName" serializeAs="String">
                 <value>NormaDeviceSettings.ini</value>
