--- a/NormaMeasure/NormaMeasure.csproj
+++ b/NormaMeasure/NormaMeasure.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Teraohmmeter\Forms\TeraEtalonMapControl.Designer.cs">
       <DependentUpon>TeraEtalonMapControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Teraohmmeter\Forms\TeraResultsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Teraohmmeter\Forms\TeraResultsForm.Designer.cs">
+      <DependentUpon>TeraResultsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Teraohmmeter\TeraDevice.cs" />
     <Compile Include="Teraohmmeter\Forms\coeffsSynchronyzeStatus.cs">
       <SubType>Form</SubType>
@@ -119,6 +125,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Teraohmmeter\Forms\TeraResultsForm.resx">
+      <DependentUpon>TeraResultsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="DBClasses\DBSettings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>DBSettings.Designer.cs</LastGenOutput>
